fixed footer (need to fix on mobile), reinstated pokeball correctly

--- a/stylesheets/desktop_style.css
+++ b/stylesheets/desktop_style.css
@@ -30,11 +30,11 @@ body {
 }
 
 .pokeball {
-  width: 220px;
-  height: 220px;
+  width: 500px;
+  height: 500px;
   position: absolute;
-  top:  80px;
-  right: 180px;
+  top:  200px;
+  left: 140px;
   z-index: 0;
 }
 
